overflow fix maybe

--- a/src/components/top/styles.scss
+++ b/src/components/top/styles.scss
@@ -2,7 +2,7 @@
   position: relative;
   height: 100vh;
   color: #fff;
-  overflow-y: hidden;
+  overflow: hidden;
   background: #000;
   justify-content: flex-start;
 
